# Pishahang

./: .dockerignore  .env.template  .eslintrc  .flake8  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  README.md  add_dev_vims_wims.sh  build_run_pishahang_changes.sh  clear_vims_wims.sh  debug.sh  debug_install.md  docker-compose.override.yml  docker-compose.yml  generate-env.sh  install_dev_pish.sh  package-lock.json  package.json  restart-mvp-plugins.sh  run_pishahang_changes.sh  server.js
docs/: conf.py  index.rst  pyproject.toml
docs/.package/: __init__.py
docs/_static/css/: custom.css
docs/developers/: apis.rst  developing.rst  microservices.rst  service_instantiation.rst  service_termination.rst  topics.rst  vnf_deploy.rst  vnf_termination.rst
docs/developers/figures/: microservices.puml
docs/figures/developers/: microservices.puml  service_instantiation.puml  service_termination.puml  vnf_deploy.puml  vnf_termination.puml
docs/figures/developers/workflows/: service_instantiation.puml  service_termination.puml  vnf_deploy.puml  vnf_termination.puml
docs/package/: __init__.py
docs/users/: usage.rst
docs/users/installation/: devstack.md  kubernetes.md  kubernetes.rst  pishahang.md
mano-framework/base/: README.md  pyproject.toml
mano-framework/base/manobase/: messaging.py  plugin.py
mano-framework/base/manobase/messaging/: __init__.py  asyncio.py  base.py  request_response.py
mano-framework/base/test/: test_messaging.py
mano-framework/pluginmanager/: Dockerfile  README.md  pyproject.toml
mano-framework/pluginmanager/pluginmanager/: __main__.py  interface.py  model.py  pluginmanager.py
mano-framework/pluginmanager/test/: test_pluginmanager.py
mano-framework/plugins/cloud-service-lifecycle-management/: README.md  pyproject.toml
mano-framework/plugins/cloud-service-lifecycle-management/clm/: __main__.py  clm.py
mano-framework/plugins/function-lifecycle-management/: Dockerfile  README.md  pyproject.toml
mano-framework/plugins/function-lifecycle-management/flm/: __main__.py  flm.py  flm_topics.py
mano-framework/plugins/scaling-executive/: Dockerfile  pyproject.toml
mano-framework/plugins/scaling-executive/scaling_executive/: __main__.py  scalingexc.py
mano-framework/plugins/scaling-executive/test/: test_scex.py
mano-framework/plugins/test-plugin/: .dockerignore  pyproject.toml
mano-framework/plugins/vim-adaptor/: .gitignore  Dockerfile  README.md  pyproject.toml
mano-framework/plugins/vim-adaptor/test/: conftest.py
mano-framework/plugins/vim-adaptor/vim_adaptor/: main.py
osm/SO/: BUILD.sh  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  foss.txt
osm/SO/common/: CMakeLists.txt  rw_gen_package.py
osm/SO/common/plugins/: CMakeLists.txt
osm/SO/common/python/: CMakeLists.txt
osm/SO/confd_client/: CMakeLists.txt  README  confd_client.c  test.sh
osm/SO/designs/: CLI_for_OSM.md  cloud-init-support.md  multisite-nsd-support.md
osm/SO/devops-stages/: stage-archive.sh  stage-build.sh  stage-test.sh
osm/SO/docker/: Dockerfile.install
osm/SO/examples/: CMakeLists.txt
osm/SO/examples/ping_pong_ns/: CMakeLists.txt  config_desc.py  generate_packages.sh.in  ping_pong_nsd.py  stand_up_ping_pong
osm/SO/models/: CMakeLists.txt
osm/SO/models/openmano/: CMakeLists.txt
osm/SO/models/plugins/: CMakeLists.txt
osm/SO/rwcal/: CMakeLists.txt
osm/SO/rwcal/plugins/: CMakeLists.txt
osm/SO/rwcal/src/: CMakeLists.txt  rwcal_py.c  rwvim.py
osm/SO/rwcal/test/: CMakeLists.txt  RIFT.ware-ready.py  aws_resources.py  cloudtool_cal.py  ec2.py  openstack_resources.py  rwcal_callback_gtest.cpp  rwcal_dump.cpp  test_aws_image_get.py  test_container_cal.py  test_openstack_install.py  test_rwcal_openstack.py  test_rwlxc_rwlaunchpad.py
osm/SO/rwcm/: CMakeLists.txt
osm/SO/rwcm/plugins/: CMakeLists.txt
osm/SO/rwcm/test/: CMakeLists.txt  rwso_test.py  start_cm_system.py
osm/SO/rwlaunchpad/: CMakeLists.txt
osm/SO/rwlaunchpad/mock/: CMakeLists.txt  get_data.sh  get_ns_instance_opdata.sh  package.json  set_data.sh  set_ping_pong.sh
osm/SO/rwlaunchpad/plugins/: CMakeLists.txt
osm/SO/rwlaunchpad/ra/: CMakeLists.txt  accounts_creation_onboard_instatiate_systest  accounts_creation_onboard_instatiate_systest_repeat_option  accounts_creation_onboard_systest  complex_scaling  gui_test_launchpad_ui  ha_basics_systest  ha_deletion_operations  ha_multiple_failovers_systest  l2port_chaining_systest  launchpad_longevity_systest  launchpad_systest  metadata_vdud_systest  multi_vm_vnf_slb_systest.sh  multi_vm_vnf_trafgen_systest.sh  ns_instantiate_memory_check_systest  onboard_delete_vnfs_systest  pingpong_accounts_systest  pingpong_floating_ip  pingpong_ha_systest  pingpong_input_params_systest  pingpong_longevity_systest  pingpong_lp_ha_systest  pingpong_mro_systest  pingpong_records_systest  pingpong_recovery_systest  pingpong_scaling_systest  pingpong_vnf_reload_systest  pingpong_vnf_systest  primitives_systest  rbac_basics_systest  rbac_identity  rbac_mano_xpaths_access  rbac_roles_systest  rbac_usage_scenarios_systest  scaling_systest  tbac_token
osm/SO/rwlaunchpad/test/: CMakeLists.txt  launchpad  launchpad.py  launchpad_recovery  mano_error_ut.py  mano_ut.py  mgmt_recovery.py  tosca_ut.py  utest_nsr_handler.py  utest_ro_account.py  utest_rwmonitor.py  utest_rwnsm.py  utest_scaling_rpc.py
osm/SO/rwmon/: CMakeLists.txt
osm/SO/rwmon/plugins/: CMakeLists.txt
osm/SO/rwprojectmano/: CMakeLists.txt
src/gatekeeper/: Dockerfile  Makefile  Pipfile  config.ini  openapi.yml  pyproject.toml  swagger.yml
src/gatekeeper/gatekeeper/: __main__.py  app.py  config.py  exceptions.py  models.py  mongoengine_custom_json.py  util.py  validation.py
src/gatekeeper/specification/: config.yml  openapi.yml
src/gatekeeper/tests/: conftest.py  fixtures.py  test_models.py  test_util.py
src/mano-framework/base/: Dockerfile  pyproject.toml
src/repository/: Dockerfile  pyproject.toml  pytest.ini
src/repository/repository/: __init__.py  __main__.py  app.py  resources.py
src/repository/tests/: test_repository.py
(+3657 files in other folders)
