[tool.poetry]
name = "pishahang_docs"
version = "0.1.0"
description = "Pishahang Documentation"
authors = ["Pishahang <pishahang@noreply.github.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
sphinx = "^3.0.2"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[flake8]
max-line-length = 100
extend-ignore = "E203"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
