[tool.poetry]
name = "pishahang-docs"
version = "0.1.0"
description = "Pishahang Documentation"
authors = ["Pishahang <pishahang@noreply.github.com>"]
license = "apache-2.0"
# Hack to make the "pip install ." during the read the docs build pass:
packages = [{ include = "package" }]

[tool.poetry.dependencies]
python = "^3.6"
sphinx = "^3.0.2"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.4.3"
sphinxcontrib-plantuml = "^0.18"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
