[tool.poetry]
name = "manobase"
version = "1.0.0"
description = "Pishahang MANO framework base"
authors = ["Manuel Peuster <manuel.peuster@upb.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
amqpstorm = "^2.7.2"
PyYAML = "^5.3.1"
requests = "^2.23.0"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
