[tool.poetry]
name = "pluginmanager"
version = "0.9.0"
description = "Pishahang MANO framework plugin manager"
authors = ["Manuel Peuster <manuel.peuster@upb.de>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4.0"
pytest = "^5.4.1"
mongoengine = "^0.19.1"
flask = "^1.1.2"
flask-restful = "^0.3.8"
requests = "^2.23.0"
pyyaml = "^5.3.1"
manobase = { path = "../base" }

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.poetry.scripts]
start = "pluginmanager.__main__:main"
pm-cli = "pluginmanager.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
