[tool.poetry]
name = "gatekeeper"
version = "0.1.0"
description = "Pishahang Gatekeeper"
authors = ["bjoluc <mail@bjoluc.de>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
connexion = { extras = ["swagger-ui"], version = "^2.7.0" }
requests = "^2.23.0"
mongoengine = "^0.20.0"
flask-mongoengine = "^0.9.5"
config2 = "^0.3.2"
flask-redis = "^0.4.0"
flask-jwt-extended = "^3.24.1"
fakeredis = "^1.4.0"
jsonschema = "^3.2.0"
wheel = "^0.34.2"
manobase = { path = "../../mano-framework/base" }

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"
requests-mock = "^1.8.0"
pytest-watch = "^4.2.0"
mongomock = "^3.19.0"
pytest-env = "^0.6.2"
pytest-mock = "^3.1.0"
snapshottest = "^0.5.1"

[tool.poetry.scripts]
start = "gatekeeper.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
