[tool.poetry]
name = "gatekeeper"
version = "0.1.0"
description = "Pishahang Gatekeeper"
authors = ["bjoluc <mail@bjoluc.de>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
connexion = { extras = ["swagger-ui"], version = "^2.7.0" }
requests = "^2.23.0"
mongoengine = "^0.20.0"
flask-mongoengine = "^0.9.5"
flask-redis = "^0.4.0"
flask-jwt-extended = "^3.24.1"
fakeredis = "^1.4.0"
jsonschema = "^3.2.0"
manobase = { path = "../mano-framework/base" }
appcfg = { extras = ["yaml"], version = "^1.1.0" }
stringcase = "^1.2.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"
requests-mock = "^1.8.0"
pytest-watch = "^4.2.0"
mongomock = "^3.19.0"
pytest-env = "^0.6.2"
pytest-mock = "^3.1.0"
snapshottest = "^0.5.1"
pytest-voluptuous = "^1.1.0"
pytest-reraise = "^1.0.3"
isort = "^5.2.1"

[tool.poetry.scripts]
start = "gatekeeper.__main__:main"

[tool.isort] # black-compatible isort rules
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = [
    "poetry>=0.12",
    # flask-mongoengine installation requires wheel
    "wheel"
]
build-backend = "poetry.masonry.api"
