[tool.poetry]
name = "clm"
version = "0.9.0"
description = "Pishahang cloud service lifecycle management plugin"
authors = []
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
amqpstorm = "^2.7.2"
manobase = { path = "../../base" }

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.poetry.scripts]
start = "clm.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
