[tool.poetry]
name = "flm"
version = "0.9.0"
description = "Pishahang function lifecycle management plugin"
authors = ["Pishahang <pishahang@noreply.github.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
amqpstorm = "^2.7.2"
manobase = { path = "../../base" }

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.poetry.scripts]
start = "flm.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
