[tool.poetry]
name = "scaling_executive"
version = "0.1.0"
description = "Pishahang Scaling Executive Plugin"
authors = ["Hadi Razzaghi Kouchaksaraei <hadi.razzaghi@upb.de>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
amqpstorm = "^2.7.2"
manobase = { path = "../../base" }

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[tool.poetry.scripts]
start = "scaling_executive.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
