[tool.poetry]
name = "test_plugin"
version = "0.9.0"
description = "Pishahang Test Plugin"
authors = ["Your Name <you@example.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
amqpstorm = "^2.7.2"
manobase = {path = "../../base"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
