[tool.poetry]
name = "manobase"
version = "1.0.0"
description = "Pishahang MANO framework base"
authors = ["Manuel Peuster <manuel.peuster@upb.de>", "bjoluc <mail@bjoluc.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
amqpstorm = "^2.7.2"
PyYAML = "^5.3.1"
requests = "^2.23.0"
psycopg2 = "^2.8.5"
appcfg = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"
pytest-voluptuous = "^1.1.0"
pytest-reraise = "^1.0.1"
isort = "^5.2.2"

[tool.isort] # black-compatible isort rules
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
