[tool.poetry]
name = "alm"
version = "1.0.0"
description = "AWS Lifecycle Manager"
authors = ["bjoluc <mail@bjoluc.de>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
flm_base = { path = "../function-lifecycle-manager-base" }

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^5.4.2"

[tool.poetry.scripts]
start = "alm.__main__:main"

[tool.isort] # black-compatible isort rules
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
