[tool.poetry]
name = "sdn"
version = "0.9.0"
description = "Pishahang SDN Plugin"
authors = ["Hadi Razzaghi Kouchaksaraei <hadi.razzaghi@upb.de>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pycrypto = "2.6.1"
manobase = { path = "../../base" }
pyzmq = "^19.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.poetry.scripts]
start = "sdn.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
