[tool.poetry]
name = "slm"
version = "0.9.1"
description = "Pishahang Service Lifecycle Management Plugin"
authors = ["Pishahang <pishahang@noreply.github.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pycrypto = "2.6.1"
manobase = { path = "../../base" }
mongoengine = "^0.20.0"
appcfg = "^1.1.1"
pytest-watch = "^4.2.0"
voluptuous = "^0.11.7"
syrupy = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"
pytest-voluptuous = "^1.1.0"
pytest-reraise = "^1.0.1"
pytest-asyncio = "^0.14.0"
pytest-watch = "^4.2.0"
isort = "^5.1.0"
pytest-env = "^0.6.2"
mongomock = "^3.19.0"
pytest-mock = "^3.2.0"

[tool.poetry.scripts]
start = "slm.__main__:main"

[tool.isort] # black-compatible isort rules
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
