[tool.poetry]
name = "smr"
version = "0.2.0"
description = "Pishahang MANO Framework SSM/FSM Manager"
authors = ["Hadi Razzaghi Kouchaksaraei <hadi.razzaghi@upb.de>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
mongoengine = "^0.19.1"
Flask = "^1.1.2"
flask-restful = "^0.3.8"
requests = "^2.23.0"
docker-py = "1.9.0"
rabbitmq-admin = "^0.2"
manobase = { path = "../../base" }

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.poetry.scripts]
specific-manager-registry = "smr.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
